# apertium-ben-asm

./: Makefile.am
